--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,10 @@
 
     <!-- Angular Material Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
+
+    <!-- GWT -->
+    <script src="expected_functions.js"></script>
+    <script src="gwt/war/bioxplorappindication/bioxplorappindication.nocache.js"></script>
   </head>
 
   <body ng-app="app">
